<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/update_dish"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtDishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Coffee"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/icon_sub"
                    android:textSize="35sp" />

                <EditText
                    android:id="@+id/edQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square"
                    android:inputType="number"
                    android:padding="10dp"
                    android:text="12" />

                <TextView
                    android:id="@+id/txtPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/icon_plus"
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_update" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_remove" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>